Fix size of header on iphone

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -31,8 +31,8 @@ a.brand {
   border-style: solid;
   border-color: $bc-green;
   color: white;
-  font-size:58px;
-  line-height:58px;
+  font-size:57px;
+  line-height:56px;
   margin-bottom:10px;
 }
 
